feat(app): database setup & cfg

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "baseUrl": "./src",
     "paths": {
       "@features/*": ["./features", "./features/*"],
-      "@lib/*": ["./lib", "./lib/*"],
+      "@lib": ["./lib"],
+      "@lib/*": ["./lib/*"],
+      "@config": ["./config"],
+      "@config/*": ["./config/*"],
       "@/*": ["./", "./*"]
     },
     "incremental": true
