--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,10 @@ DATABASE_TYPE=postgres
 DATABASE_HOST=localhost
 DATABSE_PORT=5432
 DATABASE_SYNCHRONIZE=true
+ACCESS_TOKEN_EXPIRES_IN=1800000
+REFRESH_TOKEN_EXPIRES_IN=5184000000
+JWT_SECRET_KEY=secret
+S3_ACCESS_KEY_ID=id
+S3_SECRET_ACCESS_KEY=key
+S3_BUCKET_NAME=bucket
+S3_REGION=region
