--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.5",
+    "aws-sdk": "^2.814.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
+    "nanoid": "^3.1.20",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -44,6 +47,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.9",
     "@types/jest": "25.2.3",
+    "@types/nanoid": "^2.1.0",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
