--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
+    "jdenticon": "^3.1.0",
     "nanoid": "^3.1.20",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
