--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-socket.io": "^7.6.4",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.4",
     "aws-sdk": "^2.814.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
@@ -38,6 +40,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "socket.io": "^3.0.4",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
@@ -50,6 +53,7 @@
     "@types/jest": "25.2.3",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^13.9.1",
+    "@types/socket.io": "^2.1.12",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
