--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
     "jdenticon": "^3.1.0",
+    "mime-types": "^2.1.28",
     "nanoid": "^3.1.20",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
@@ -51,6 +52,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.9",
     "@types/jest": "25.2.3",
+    "@types/mime-types": "^2.1.0",
     "@types/nanoid": "^2.1.0",
     "@types/node": "^13.9.1",
     "@types/socket.io": "^2.1.12",
