--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
+    "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-socket.io": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
-    "@nestjs/websockets": "^7.6.4",
+    "@nestjs/websockets": "^7.6.15",
     "aws-sdk": "^2.814.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
@@ -52,7 +53,7 @@
     "@types/jest": "25.2.3",
     "@types/mime": "^2.0.3",
     "@types/node": "^13.9.1",
-    "@types/socket.io": "^2.1.12",
+    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "3.0.2",
