--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "socket.io": "^3.0.4",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.32",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
