--- a/package.json
+++ b/package.json
@@ -22,55 +22,56 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
-    "@nestjs/config": "^0.6.1",
-    "@nestjs/core": "^7.0.0",
+    "@nestjs/config": "^0.6.3",
+    "@nestjs/core": "^7.6.15",
     "@nestjs/jwt": "^7.2.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-express": "^7.6.15",
     "@nestjs/platform-socket.io": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
-    "aws-sdk": "^2.814.0",
+    "aws-sdk": "^2.902.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
-    "helmet": "^4.4.1",
+    "file-type": "^16.4.0",
+    "helmet": "^4.6.0",
     "jdenticon": "^3.1.0",
-    "pg": "^8.5.1",
+    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "socket.io": "^3.0.4",
+    "rxjs": "^6.6.7",
+    "socket.io": "^3.1.2",
     "typeorm": "^0.2.32",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/schematics": "^7.3.1",
+    "@nestjs/testing": "^7.6.15",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.9",
-    "@types/jest": "25.2.3",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/mime": "^2.0.3",
-    "@types/node": "^13.9.1",
+    "@types/node": "^13.13.51",
     "@types/socket.io": "^2.1.13",
-    "@types/supertest": "^2.0.10",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
     "eslint": "7.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
-    "jest": "26.0.1",
+    "jest": "^26.6.3",
     "mime": "^2.5.2",
     "prettier": "^1.19.1",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.3",
-    "ts-loader": "^8.0.18",
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^8.2.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.9.9"
   },
   "jest": {
     "moduleFileExtensions": [
