--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "helmet": "^4.6.0",
     "jdenticon": "^3.1.0",
@@ -49,6 +50,7 @@
     "@nestjs/schematics": "^7.3.1",
     "@nestjs/testing": "^7.6.15",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
