fix: deployment.yml

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,9 +22,8 @@ jobs:
             sudo mkdir ~/backend
             cd ~/backend
             sudo git clone https://github.com/ansatjrt/messenger-backend .
-            sudo npm install
+            sudo npm ci
             sudo cp ~/.env.production ~/backend
-            export NODE_ENV=production
-            sudo node dist/main.js
+            sudo NODE_ENV=production node dist/main.js
 
 
